# AP33772S-rs

./: .gitignore  .mega-linter.yaml  .release-plz.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  README.md  device.yaml
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yaml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: continuous-build.yaml  continuous-test.yaml  dependabot.yaml  mega-linter.yaml  release-plz.yaml
docs/: understanding-the-usb-c-pd-specification.md
examples/: README.md  avs_cycle.rs  avs_fixed.rs  example.rs  power_data_object_query.rs  power_data_object_send.rs  power_data_object_switch.rs  pps_cycle.rs  query.rs  serial_profile_on_off.rs  startup_configuration.rs  state_query.rs
examples/esp32c3/: Cargo.toml  README.md
examples/raspberrypi/: Cargo.toml  README.md
examples/raspberrypi/src/: main.rs
src/: ap33772s.rs  commands.rs  communications.rs  error.rs  errors.rs  getters.rs  lib.rs  setters.rs  types.rs  units.rs
src/commands/: command_map.rs  configuration.rs  current.rs  data_objects.rs  extended_power_range_data_object.rs  interrupt_enable.rs  macros.rs  minimum_selection_voltage.rs  operation_mode.rs  over_temperature_threshold.rs  power_delivery.rs  power_delivery_command_message.rs  power_delivery_configuration.rs  power_delivery_message_result.rs  power_delivery_request_message.rs  protection_mode_configuration.rs  requested.rs  source_power_data_object.rs  statistics.rs  status.rs  system_control.rs  temperature.rs  thermal_resistances.rs  thresholds.rs  traits.rs  voltage.rs
src/commands/configuration/: interrupt_enable.rs  operation_mode.rs  power_delivery_configuration.rs  protection_mode_configuration.rs  status.rs  system_control.rs
src/commands/data_objects/: all_source_power_data_object.rs  extended_power_range_data_object.rs  source_power_data_object.rs  source_power_range_data_object.rs  standard_power_range_data_object.rs
src/commands/misc/: gpio.rs
src/commands/power_delivery/: power_delivery_command_message.rs  power_delivery_configuration.rs  power_delivery_message_result.rs  power_delivery_request_message.rs
src/commands/requested/: current_requested.rs  voltage_requested.rs
src/commands/statistics/: current.rs  minimum_selection_voltage.rs  temperature.rs  voltage.rs
src/commands/thermal_resistances/: thermal_resistance_100.rs  thermal_resistance_25.rs  thermal_resistance_50.rs  thermal_resistance_75.rs
src/commands/thresholds/: de_rating_threshold.rs  over_current_protection_threshold.rs  over_temperature_protection_threshold.rs  over_voltage_protection_threshold.rs  under_voltage_protection_threshold.rs  vdc_threshold.rs
src/communications/: i2c_communication.rs  traits.rs
tests/: test_formatting.rs  test_standard_api_formatting.rs
utils/: Cargo.toml
utils/src/: lib.rs
