[package]
name = "ap33772s-rs"
version = "0.0.0"
edition = "2024"
description = "Driver for the AP33772S USB C Power Delivery and Extended Power Supply IC. Allowing for both embedded-hal and embedded-hal-async I2C"
authors = ["Scott Gibb <smgibb@yahoo.com"]
repository = "https://github.com/ScottGibb/AP33772S-rs"
license = "Apache-2.0"
[features]
default = ["sync", "advanced"]
sync = ["dep:embedded-hal", "maybe-async/is_sync"]
async = ["dep:embedded-hal-async"]
advanced = [] # Used to enable lower level register access

[dependencies]
arbitrary-int = "1.3.0"
bitbybit = "1.3.3"
embedded-hal = { version = "1.0.0", optional = true }
embedded-hal-async = { version = "1.0.0", optional = true }
maybe-async = "0.2.10"
num_enum = {version ="0.7.3", default-features = false}
uom = { version = "0.37.0",default-features = false, features = ["f32", "si"] }


[dev-dependencies]
utils ={ path = "./utils"}