[package]
name = "ap33772s-rs"
version = "0.1.0"
edition = "2024"
description = "Driver for the AP33772S USB C Power Delivery and Extended Power Supply IC. Allowing for both embedded-hal and embedded-hal-async I2C"
authors = ["Scott Gibb <smgibb@yahoo.com>"]
repository = "https://github.com/ScottGibb/AP33772S-rs"
license = "Apache-2.0"
publish = true


[features]
default = ["sync"]
sync = ["dep:embedded-hal", "maybe-async/is_sync"]
async = ["dep:embedded-hal-async"]
defmt = ["dep:defmt"]
interrupts = []
advanced = [] # Used to enable lower level register access

[dependencies]
# Hal Dependencies
maybe-async = "0.2.10"
defmt = {version = "1.0.1", optional = true}
embedded-hal = { version = "1.0.0", optional = true }
embedded-hal-async = { version = "1.0.0", optional = true }

# Driver Dependencies
arbitrary-int = "1.3.0"
bitbybit = "1.3.3"
uom = { version = "0.37.0",default-features = false, features = ["autoconvert", "si", "f32",]}
visibility = "0.1.1"


[package.metadata.docs.rs]
no-default-features = false   
all-features = false            
# no need to set features here because default already includes sync
# This is to ensures the docs build correctly on crates.io.

[dev-dependencies]
utils ={ path = "./utils"}

[workspace]

members = [ 
   "utils",
]
