[package]
name = "ap33772s-rs"
version = "0.1.3"
edition = "2024"
description = "Driver for the AP33772S USB C Power Delivery and Extended Power Supply IC. Allowing for both embedded-hal and embedded-hal-async I2C"
authors = ["Scott Gibb <smgibb@yahoo.com>"]
repository = "https://github.com/ScottGibb/AP33772S-rs"
license = "Apache-2.0"
publish = true


[features]
default = ["sync"]
sync = ["dep:embedded-hal", "maybe-async/is_sync"]
async = ["dep:embedded-hal-async"]
defmt = ["dep:defmt"]
interrupts = []
advanced = [] # Used to enable lower level register access

[dependencies]
# Hal Dependencies
maybe-async = "0.2.10"
defmt = {version = "1.0.1", optional = true}
embedded-hal = { version = "1.0.0", optional = true }
embedded-hal-async = { version = "1.0.0", optional = true }

# Driver Dependencies
arbitrary-int = "2.0.0"
bitbybit = "1.3.3"
uom = { version = "0.37.0",default-features = false, features = ["autoconvert", "si", "f32",]}
visibility = "0.1.1"

[dev-dependencies]
utils ={ path = "./utils"}

[workspace]

members = [ 
   "utils",
]

[package.metadata.docs.rs]
dependencies = ["libftdi1", "libftdi1-dev"]

# Example binaries and their required features
# All examples require the 'sync' feature except 'startup_configuration' which also needs 'advanced'
[[example]]
name = "avs_cycle"
required-features = ["sync"]

[[example]]
name = "avs_fixed"
required-features = ["sync"]

[[example]]
name = "power_data_object_query"
required-features = ["sync"]

[[example]]
name = "power_data_object_send"
required-features = ["sync"]

[[example]]
name = "power_data_object_switch"
required-features = ["sync"]

[[example]]
name = "pps_cycle"
required-features = ["sync"]

[[example]]
name = "serial_profile_on_off"
required-features = ["sync"]

[[example]]
name = "state_query"
required-features = ["sync"]

[[example]]
name = "startup_configuration"
required-features = ["sync", "advanced"]


